--- a/app/views/asset/noneeabusiness/AnswersView.scala.html
+++ b/app/views/asset/noneeabusiness/AnswersView.scala.html
@@ -38,7 +38,7 @@
     @formHelper(action = AnswersController.onSubmit(index, draftId), 'autoComplete -> "off") {
         @heading("nonEeaBusiness.answers.heading")
 
-        @govukSummaryList(SummaryList(rows = SectionFormatter.formatSections(answerSections)))
+        @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
 
         @submitButton()
     }
