--- a/app/views/asset/partnership/PartnershipAnswersView.scala.html
+++ b/app/views/asset/partnership/PartnershipAnswersView.scala.html
@@ -17,6 +17,7 @@
 @import controllers.asset.partnership.routes._
 @import viewmodels.{AnswerSection, RepeaterAnswerSection, Section}
 @import views.html.components.{SubmitButton, Heading}
+@import utils.SectionFormatter.formatSections
 
 @this(
     main_template: MainTemplate,
