--- a/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
@@ -17,6 +17,7 @@
 @import controllers.asset.property_or_land.routes._
 @import viewmodels.Section
 @import views.html.components.{SubmitButton, Heading}
+@import utils.SectionFormatter.formatSections
 
 @this(
     main_template: MainTemplate,
