--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -50,8 +50,9 @@
             field = form("value"),
             legend = messages(s"$prefix.additional-content"),
             legendAsHeading = false,
-            legendClass = Some("govuk-fieldset__legend--m"),
+            legendClass = Some("govuk-heading-m"),
             inputs = mapRadioOptionsToRadioItems(form("value"), trackGa = false, AddAssets.options(prefix)),
+            inline = false
         )
         @submitButton()
     }
