--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -51,7 +51,8 @@
             legend = heading.toString,
             legendClass = Some("govuk-heading-l"),
             inputs = mapRadioOptionsToRadioItems(form("value"), trackGa = false, options),
-            legendAsHeading = true
+            legendAsHeading = true,
+            inline = false
         )
 
         @submitButton()
