--- a/app/views/components/HeadingWithCaption.scala.html
+++ b/app/views/components/HeadingWithCaption.scala.html
@@ -21,6 +21,6 @@
 @(messagePrefix: String, optionalParam: Option[String] = None, captionParam: Option[String] = None)(implicit messages: Messages)
 
 <h1 class="govuk-heading-l">
- @subHeading(s"$messagePrefix.caption.hidden", s"$messagePrefix.caption", captionParam.getOrElse(""))
+ @subHeading(s"$messagePrefix.caption", captionParam.getOrElse(""))
  @messages(s"$messagePrefix.heading", optionalParam.getOrElse(""))
 </h1>
