--- a/app/views/components/SubHeading.scala.html
+++ b/app/views/components/SubHeading.scala.html
@@ -16,6 +16,11 @@
 
 @this()
 
-@(hiddenKey: String, key: String, param: String)(implicit messages: Messages)
+@(key: String, param: String, hiddenText: Boolean = true)(implicit messages: Messages)
 
-<span class="govuk-caption-l">@messages(hiddenKey) @messages(key, param)</span>
+<span class="govuk-caption-l">
+ @if(hiddenText){
+  <span class="govuk-visually-hidden">@messages(s"$key.hidden")</span>
+ }
+ @messages(key, param)
+</span>
