TRUS-4272 Fix display of numeric fields

--- a/app/views/asset/other/OtherAssetValueView.scala.html
+++ b/app/views/asset/other/OtherAssetValueView.scala.html
@@ -44,7 +44,9 @@
             prefix = Some(messages(s"symbolText.asSterling")),
             hint = Some(messages(s"other.value.hint")),
             labelAsHeading = true,
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
