--- a/app/views/asset/property_or_land/PropertyLandValueTrustView.scala.html
+++ b/app/views/asset/property_or_land/PropertyLandValueTrustView.scala.html
@@ -42,8 +42,10 @@
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true,
             hint = Some(messages("propertyOrLand.valueInTrust.hint")),
-            prefix = Some(messages(s"symbolText.asSterling")),
-            inputMode = Some("numeric")
+            prefix = Some(messages("symbolText.asSterling")),
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
