--- a/app/views/asset/property_or_land/PropertyOrLandTotalValueView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandTotalValueView.scala.html
@@ -43,7 +43,9 @@
             labelAsHeading = true,
             hint = Some(messages("propertyOrLand.totalValue.hint")),
             prefix = Some(messages(s"symbolText.asSterling")),
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
