--- a/app/views/asset/business/BusinessValueView.scala.html
+++ b/app/views/asset/business/BusinessValueView.scala.html
@@ -43,7 +43,9 @@
             prefix = Some(messages(s"symbolText.asSterling")),
             hint = Some(messages(s"business.currentValue.hint")),
             labelAsHeading = true,
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
