--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -47,10 +47,12 @@
             field = form("value"),
             label = messages("money.value.heading"),
             labelClass = Some("govuk-heading-l"),
-            prefix = Some(messages(s"symbolText.asSterling")),
-            hint = Some(messages(s"money.value.hint")),
+            prefix = Some(messages("symbolText.asSterling")),
+            hint = Some(messages("money.value.hint")),
             labelAsHeading = false,
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
