--- a/app/views/asset/shares/SharePortfolioValueInTrustView.scala.html
+++ b/app/views/asset/shares/SharePortfolioValueInTrustView.scala.html
@@ -43,7 +43,9 @@
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true,
             hint = Some(messages("shares.portfolioValueInTrust.hint")),
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
