--- a/app/views/asset/shares/ShareAnswersView.scala.html
+++ b/app/views/asset/shares/ShareAnswersView.scala.html
@@ -39,5 +39,6 @@
 
         @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
 
-        @submitButton()    }
+        @submitButton()
+    }
 }
