TRUS-4272 Add Options into the ErrorSummary on InputRadio views

--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -44,7 +44,7 @@
 
     @formHelper(action = WhatKindOfAssetController.onSubmit(index, draftId), 'autoComplete -> "off") {
 
-        @errorSummary(form.errors)
+        @errorSummary(form.errors, options)
 
         @inputRadio(
             field = form("value"),
