--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -47,7 +47,7 @@
 
     @formHelper(action = AddAssetsController.submitAnother(draftId), 'autoComplete -> "off") {
 
-        @errorSummary(form.errors)
+        @errorSummary(form.errors, AddAssets.options(prefix))
 
         @headingComp(heading)
 
