--- a/app/views/asset/business/BusinessDescriptionView.scala.html
+++ b/app/views/asset/business/BusinessDescriptionView.scala.html
@@ -41,7 +41,7 @@
           label = messages("business.description.heading", businessName),
           labelAsHeading = true,
           labelClass=Some("govuk-heading-l"),
-          inputClass = Some("form-control-3-4"),
+          inputClass = Some("govuk-!-width-three-quarters"),
           hint = Some(messages("business.description.hint"))
         )
 
