TRUS-4272 Change class to hide legend

--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -46,7 +46,7 @@
         @inputText(
             field = form("value"),
             label = messages("money.value.heading"),
-            labelClass = Some("govuk-heading-l"),
+            labelClass = Some("govuk-visually-hidden"),
             prefix = Some(messages("symbolText.asSterling")),
             hint = Some(messages("money.value.hint")),
             labelAsHeading = false,
