[CS] added style for input size in shareViews

--- a/app/views/asset/shares/ShareQuantityInTrustView.scala.html
+++ b/app/views/asset/shares/ShareQuantityInTrustView.scala.html
@@ -43,7 +43,8 @@
             labelAsHeading = true,
             hint = Some(messages("shares.quantityInTrust.hint")),
             inputMode = Some("numeric"),
-            pattern = Some("[0-9]*")
+            pattern = Some("[0-9]*"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
