--- a/app/views/asset/shares/ShareValueInTrustView.scala.html
+++ b/app/views/asset/shares/ShareValueInTrustView.scala.html
@@ -43,7 +43,8 @@
             labelClass = Some("govuk-heading-l"),
             labelAsHeading = true,
             hint = Some(messages("shares.valueInTrust.hint")),
-            inputMode = Some("numeric")
+            inputMode = Some("numeric"),
+            inputClass = Some("govuk-input--width-10")
         )
 
         @submitButton()
