--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -28,8 +28,6 @@
 
 @(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
 
-@optionalHtmlContent = {<p>@messages("money.value.paragraph1")</p>}
-
 @main_template(
     title = s"${errorPrefix(form)} ${messages("money.value.title")}",
     showBackLink = true
@@ -39,17 +37,13 @@
 
         @errorSummary(form.errors)
 
-        @heading("money.value.heading")
-
-        @optionalHtmlContent
-
         @inputText(
             field = form("value"),
             label = messages("money.value.heading"),
-            labelClass = Some("govuk-visually-hidden"),
+            labelClass=Some("govuk-heading-l"),
             prefix = Some(messages("symbolText.asSterling")),
             hint = Some(messages("money.value.hint")),
-            labelAsHeading = false,
+            labelAsHeading = true,
             inputMode = Some("numeric"),
             pattern = Some("[0-9]*"),
             inputClass = Some("govuk-input--width-10")
