--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -50,7 +50,7 @@
             field = form("value"),
             legend = heading.toString,
             legendClass = Some("govuk-heading-l"),
-            inputs = mapRadioOptionsToRadioItems(form("value"), trackGa = false, options),
+            inputs = mapRadioOptionsToRadioItems(form("value"), options),
             legendAsHeading = true,
             inline = false
         )
