--- a/app/views/asset/noneeabusiness/GoverningCountryView.scala.html
+++ b/app/views/asset/noneeabusiness/GoverningCountryView.scala.html
@@ -44,7 +44,7 @@
             labelAsHeading   = true,
             options          = countryOptions,
             placeholder      = Some(messages("site.address.country.select")),
-            formGroupClasses = Set("autocomplete-wrapper govuk-!-width-three-quarters"),
+            formGroupClasses = Set("autocomplete-wrapper"),
             selectAttribute  = Map("data-all-countries" -> "")
         )
 
