--- a/app/views/asset/business/BusinessDescriptionView.scala.html
+++ b/app/views/asset/business/BusinessDescriptionView.scala.html
@@ -15,13 +15,13 @@
  *@
 
 @import controllers.asset.business.routes._
-@import views.html.components.{ErrorSummary, InputCharacterCount, SubmitButton}
+@import views.html.components.{ErrorSummary, InputTextCharacterCount, SubmitButton}
 
 @this(
     main_template: MainTemplate,
     formHelper: FormWithCSRF,
     errorSummary: ErrorSummary,
-    characterCount: InputCharacterCount,
+    characterCount: InputTextCharacterCount,
     submitButton: SubmitButton
 )
 
@@ -41,7 +41,9 @@
             id = "value",
             name = "value",
             label = messages("business.description.heading", businessName),
+            isLabelHidden = true,
             isPageHeading = true,
+            inputClass = Some("govuk-!-width-three-quarters"),
             maxLength = Some(56)
         )
 
