[TRUS-4510] - Browser title is incorrect for non-taxable registrations

--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -37,11 +37,13 @@
     completeAssets: Seq[AddRow],
     heading: String,
     prefix: String,
-    maxedOut: List[(String, Int)]
+    maxedOut: List[(String, Int)],
+    isTaxable: Boolean
 )(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} $heading",
+    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
