--- a/app/views/asset/MaxedOutView.scala.html
+++ b/app/views/asset/MaxedOutView.scala.html
@@ -32,11 +32,13 @@
     completeAssets: Seq[AddRow],
     heading: String,
     maxLimit: Int,
-    prefix: String
+    prefix: String,
+    isTaxable: Boolean
 )(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = heading,
+    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
