--- a/app/views/asset/NonTaxableInfoView.scala.html
+++ b/app/views/asset/NonTaxableInfoView.scala.html
@@ -29,6 +29,7 @@
 
 @main_template(
     title = messages("assetInterruptPage.nonTaxable.title"),
+    isTaxable = false,
     showBackLink = true
 ) {
 
