--- a/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
+++ b/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
@@ -29,6 +29,7 @@
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("trustOwnsNonEeaBusinessYesNo.title")}",
+    isTaxable = false,
     showBackLink = true
 ) {
 
