--- a/app/views/asset/AddAnAssetYesNoView.scala.html
+++ b/app/views/asset/AddAnAssetYesNoView.scala.html
@@ -24,10 +24,11 @@
         inputYesNo: InputYesNo,
         errorSummary: ErrorSummary
 )
-@(form: Form[_], draftId: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("addAnAssetYesNo.title")}",
+    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
