--- a/app/views/asset/WhatKindOfAssetView.scala.html
+++ b/app/views/asset/WhatKindOfAssetView.scala.html
@@ -27,7 +27,7 @@
         inputRadio: InputRadio,
 )
 
-@(form: Form[_], draftId: String, index: Int, options: List[RadioOption])(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, options: List[RadioOption], isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
 
 @title = {
     @if(index == 0) {@messages("whatKindOfAsset.first.title")} else {@messages("whatKindOfAsset.next.title")}
@@ -39,6 +39,7 @@
 
 @main_template(
     title = s"${errorPrefix(form)} $title",
+    isTaxable = isTaxable,
     showBackLink = true
     ) {
 
