--- a/app/views/asset/noneeabusiness/AnswersView.scala.html
+++ b/app/views/asset/noneeabusiness/AnswersView.scala.html
@@ -28,10 +28,11 @@
 
 )
 
-@(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
+@(index: Int, draftId: String, answerSections: Seq[Section], isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = messages("nonEeaBusiness.answers.title"),
+    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
