TRUS-4510: Refactored breadcrumbTitle implementation.

--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -18,6 +18,7 @@
 @import config.FrontendAppConfig
 @import uk.gov.hmrc.hmrcfrontend.views.config.StandardBetaBanner
 @import resources._
+@import views.ViewUtils
 
 @this(
     appConfig: FrontendAppConfig,
@@ -31,11 +32,12 @@
     hmrcScripts: HmrcScripts,
     stylesheets: Stylesheets,
     govukBackLink: GovukBackLink,
-    hmrcReportTechnicalIssueHelper: HmrcReportTechnicalIssueHelper
+    hmrcReportTechnicalIssueHelper: HmrcReportTechnicalIssueHelper,
+    viewUtils: ViewUtils
 )
 
-@(title: String,
-    isTaxable: Boolean = true,
+@(
+    title: String,
     sidebarLinks: Option[Html] = None,
     contentHeader: Option[Html] = None,
     bodyClasses: Option[String] = None,
@@ -64,11 +66,11 @@
 
 @beforeContentBlock = {
     @hmrcLanguageSelectHelper()
-        @if(showBackLink) {
-            @govukBackLink(BackLink(
-                attributes = Map("id" -> "back-link"), classes="js-enabled", href="javascript:history.back()", content = HtmlContent(messages("site.back"))
-            ))
-        }
+    @if(showBackLink) {
+        @govukBackLink(BackLink(
+            attributes = Map("id" -> "back-link"), classes="js-enabled", href="javascript:history.back()", content = HtmlContent(messages("site.back"))
+        ))
+    }
 }
 
 @mainContentWithGetHelp = {
@@ -77,7 +79,7 @@
 }
 
 @govukLayout(
-    pageTitle = Some(breadcrumbTitle(title, isTaxable)),
+    pageTitle = Some(viewUtils.breadcrumbTitle(title)),
     headBlock = Some(hmrcHead(
         headBlock = Some(headScripts)
     )),
