--- a/app/views/asset/RemoveAssetYesNoView.scala.html
+++ b/app/views/asset/RemoveAssetYesNoView.scala.html
@@ -18,18 +18,17 @@
 @import views.html.components.{SubmitButton, ErrorSummary, InputYesNo}
 
 @this(
-        main_template: MainTemplate,
-        formHelper: FormWithCSRF,
-        submitButton: SubmitButton,
-        inputYesNo: InputYesNo,
-        errorSummary: ErrorSummary
+    main_template: MainTemplate,
+    formHelper: FormWithCSRF,
+    submitButton: SubmitButton,
+    inputYesNo: InputYesNo,
+    errorSummary: ErrorSummary
 )
 
-@(form: Form[_], draftId: String, index: Int, prefix: String, asset: String, isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, prefix: String, asset: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages(s"$prefix.removeYesNo.title")}",
-    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
