--- a/app/views/asset/noneeabusiness/AnswersView.scala.html
+++ b/app/views/asset/noneeabusiness/AnswersView.scala.html
@@ -25,14 +25,12 @@
     submitButton: SubmitButton,
     heading: Heading,
     govukSummaryList: GovukSummaryList
-
 )
 
-@(index: Int, draftId: String, answerSections: Seq[Section], isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
+@(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = messages("nonEeaBusiness.answers.title"),
-    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
