--- a/app/views/asset/noneeabusiness/GoverningCountryView.scala.html
+++ b/app/views/asset/noneeabusiness/GoverningCountryView.scala.html
@@ -26,11 +26,10 @@
     submitButton: SubmitButton
 )
 
-@(form: Form[_], countryOptions: Seq[InputOption], draftId: String, index: Int, name: String, isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], countryOptions: Seq[InputOption], draftId: String, index: Int, name: String)(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("nonEeaBusiness.governingCountry.title")}",
-    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
