--- a/app/views/asset/noneeabusiness/NameView.scala.html
+++ b/app/views/asset/noneeabusiness/NameView.scala.html
@@ -25,11 +25,10 @@
     submitButton: SubmitButton
 )
 
-@(form: Form[_], draftId: String, index: Int, isTaxable: Boolean)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("nonEeaBusiness.name.title")}",
-    isTaxable = isTaxable,
     showBackLink = true
 ) {
 
