--- a/app/views/asset/MaxedOutView.scala.html
+++ b/app/views/asset/MaxedOutView.scala.html
@@ -32,8 +32,7 @@
     completeAssets: Seq[AddRow],
     heading: String,
     maxLimit: Int,
-    prefix: String,
-    isTaxable: Boolean
+    prefix: String
 )(implicit request: Request[_], messages: Messages)
 
 @main_template(
