--- a/app/views/asset/AddAssetsView.scala.html
+++ b/app/views/asset/AddAssetsView.scala.html
@@ -59,7 +59,7 @@
             <div class="govuk-inset-text">
                 <ul class="govuk-list">
                     @if(maxedOut.head._1 == "whatKindOfAsset.Other") {
-                        <p>@messages(s"$prefix.maxedOut.other.just1", maxedOut.head._2.toString)</p>
+                        <li><p>@messages(s"$prefix.maxedOut.other.just1", maxedOut.head._2.toString)</p></li>
                     } else {
                         <li><p>@messages(s"$prefix.maxedOut.just1", messages(maxedOut.head._1).uncapitalize, maxedOut.head._2.toString)</p></li>
                     }
