DDCE-3921 Resolve warnings

--- a/app/views/asset/AddAnAssetYesNoView.scala.html
+++ b/app/views/asset/AddAnAssetYesNoView.scala.html
@@ -32,7 +32,7 @@
     showBackLink = true
 ) {
 
-    @formHelper(action = AddAssetsController.submitOne(draftId), 'autoComplete -> "off") {
+    @formHelper(action = AddAssetsController.submitOne(draftId), Symbol("autoComplete") -> "off") {
 
         @errorSummary(form.errors)
 
