--- a/app/views/asset/partnership/PartnershipAnswersView.scala.html
+++ b/app/views/asset/partnership/PartnershipAnswersView.scala.html
@@ -34,7 +34,7 @@
     showBackLink = true
 ) {
 
-    @formHelper(action = PartnershipAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
+    @formHelper(action = PartnershipAnswerController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
 
         @heading("partnership.answers.heading")
 
