--- a/app/views/asset/business/BusinessAnswersView.scala.html
+++ b/app/views/asset/business/BusinessAnswersView.scala.html
@@ -35,7 +35,7 @@
     showBackLink = true
 ) {
 
-    @formHelper(action = BusinessAnswersController.onSubmit(index, draftId), 'autoComplete -> "off") {
+    @formHelper(action = BusinessAnswersController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
 
         @heading("business.answers.heading")
 
