--- a/app/views/asset/property_or_land/PropertyOrLandAddressYesNoView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAddressYesNoView.scala.html
@@ -32,7 +32,7 @@
     showBackLink = true
 ) {
 
-    @formHelper(action = PropertyOrLandAddressYesNoController.onSubmit(index, draftId), 'autoComplete -> "off") {
+    @formHelper(action = PropertyOrLandAddressYesNoController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
 
         @errorSummary(form.errors)
 
