--- a/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandAnswersView.scala.html
@@ -35,7 +35,7 @@
 ) {
 
 
-    @formHelper(action = PropertyOrLandAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
+    @formHelper(action = PropertyOrLandAnswerController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
 
         @heading("propertyOrLand.answers.heading")
 
