--- a/app/views/asset/shares/ShareAnswersView.scala.html
+++ b/app/views/asset/shares/ShareAnswersView.scala.html
@@ -34,7 +34,7 @@
     showBackLink = true
 ) {
 
-    @formHelper(action = ShareAnswerController.onSubmit(index, draftId), 'autoComplete -> "off") {
+    @formHelper(action = ShareAnswerController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
         @heading("shares.answers.heading")
 
         @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
