[DDCE-4192] Dependency update + csp changes

--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -18,7 +18,6 @@
 @import uk.gov.hmrc.hmrcfrontend.views.config.StandardBetaBanner
 @import resources._
 @import views.ViewUtils
-@import views.html.helper.CSPNonce
 
 @this(
     appConfig: FrontendAppConfig,
@@ -80,16 +79,13 @@
 
 @govukLayout(
     pageTitle = Some(viewUtils.breadcrumbTitle(title)),
-    headBlock = Some(hmrcHead(
-        nonce = CSPNonce.get,
-        headBlock = Some(headScripts)
-    )),
+    headBlock = Some(hmrcHead(headBlock = Some(headScripts))),
     headerBlock = Some(hmrcStandardHeader(
         serviceUrl = Some(appConfig.loginContinueUrl),
         signOutUrl = if(canSignOut) Some(controllers.routes.LogoutController.logout().url) else None,
         phaseBanner = None
     )),
     beforeContentBlock = Some(beforeContentBlock),
-    scriptsBlock = Some(hmrcScripts(nonce = CSPNonce.get)),
+    scriptsBlock = Some(hmrcScripts()),
     footerBlock = Some(hmrcStandardFooter())
 )(mainContentWithGetHelp)
