--- a/app/views/FeatureNotAvailableView.scala.html
+++ b/app/views/FeatureNotAvailableView.scala.html
@@ -23,7 +23,7 @@
     heading: Heading
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@()(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = messages("featureNotAvailable.title"),
