--- a/app/views/asset/AddAnAssetYesNoView.scala.html
+++ b/app/views/asset/AddAnAssetYesNoView.scala.html
@@ -25,7 +25,7 @@
     errorSummary: ErrorSummary
 )
 
-@(form: Form[_], draftId: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("addAnAssetYesNo.title")}",
