--- a/app/views/asset/MaxedOutView.scala.html
+++ b/app/views/asset/MaxedOutView.scala.html
@@ -33,7 +33,7 @@
     heading: String,
     maxLimit: Int,
     prefix: String
-)(implicit request: Request[_], messages: Messages)
+)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = heading,
