--- a/app/views/asset/NonTaxableInfoView.scala.html
+++ b/app/views/asset/NonTaxableInfoView.scala.html
@@ -25,7 +25,7 @@
     headingWithCaption: HeadingWithCaption
 )
 
-@(draftId: String)(implicit request: Request[_], messages: Messages)
+@(draftId: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = messages("assetInterruptPage.nonTaxable.title"),
