--- a/app/views/asset/RemoveAssetYesNoView.scala.html
+++ b/app/views/asset/RemoveAssetYesNoView.scala.html
@@ -25,7 +25,7 @@
     errorSummary: ErrorSummary
 )
 
-@(form: Form[_], draftId: String, index: Int, prefix: String, asset: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, prefix: String, asset: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages(s"$prefix.removeYesNo.title")}",
