--- a/app/views/asset/business/BusinessAnswersView.scala.html
+++ b/app/views/asset/business/BusinessAnswersView.scala.html
@@ -28,7 +28,7 @@
     govukSummaryList: GovukSummaryList
 )
 
-@(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
+@(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = messages("business.answers.title"),
