--- a/app/views/asset/business/BusinessUkAddressView.scala.html
+++ b/app/views/asset/business/BusinessUkAddressView.scala.html
@@ -25,7 +25,7 @@
     submitButton: SubmitButton
 )
 
-@(form: Form[_], draftId: String, index: Int, businessName: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, businessName: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("business.ukAddress.title")}",
