--- a/app/views/asset/money/AssetMoneyValueView.scala.html
+++ b/app/views/asset/money/AssetMoneyValueView.scala.html
@@ -26,7 +26,7 @@
     heading: Heading
 )
 
-@(form: Form[_], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("money.value.title")}",
