--- a/app/views/asset/noneeabusiness/InternationalAddressView.scala.html
+++ b/app/views/asset/noneeabusiness/InternationalAddressView.scala.html
@@ -26,7 +26,7 @@
     submitButton: SubmitButton
 )
 
-@(form: Form[_], countryOptions: Seq[InputOption], index: Int, draftId: String, name: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], countryOptions: Seq[InputOption], index: Int, draftId: String, name: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("nonEeaBusiness.internationalAddress.title")}",
