--- a/app/views/asset/other/OtherAssetValueView.scala.html
+++ b/app/views/asset/other/OtherAssetValueView.scala.html
@@ -26,7 +26,7 @@
 
 )
 
-@(form: Form[_], draftId: String, index: Int, description: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, description: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("other.value.title")}",
