--- a/app/views/asset/partnership/PartnershipAnswersView.scala.html
+++ b/app/views/asset/partnership/PartnershipAnswersView.scala.html
@@ -27,7 +27,7 @@
     govukSummaryList: GovukSummaryList
 )
 
-@(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: Request[_], messages: Messages)
+@(index : Int, draftId: String, answerSections: Seq[Section])(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = messages("partnership.answers.title"),
