--- a/app/views/asset/property_or_land/PropertyOrLandInternationalAddressView.scala.html
+++ b/app/views/asset/property_or_land/PropertyOrLandInternationalAddressView.scala.html
@@ -26,7 +26,7 @@
     submitButton: SubmitButton
 )
 
-@(form: Form[_], countryOptions: Seq[InputOption], draftId: String, index: Int)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], countryOptions: Seq[InputOption], draftId: String, index: Int)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("propertyOrLand.internationalAddress.title")}",
