--- a/app/views/asset/property_or_land/TrustOwnAllThePropertyOrLandView.scala.html
+++ b/app/views/asset/property_or_land/TrustOwnAllThePropertyOrLandView.scala.html
@@ -25,7 +25,7 @@
     errorSummary: ErrorSummary
 )
 
-@(form: Form[_], index: Int, draftId: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], index: Int, draftId: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("propertyOrLand.trustOwnAllYesNo.title")}",
