--- a/app/views/asset/shares/SharesOnStockExchangeView.scala.html
+++ b/app/views/asset/shares/SharesOnStockExchangeView.scala.html
@@ -25,7 +25,7 @@
     errorSummary: ErrorSummary
 )
 
-@(form: Form[_], draftId: String, index: Int, companyName: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], draftId: String, index: Int, companyName: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = s"${errorPrefix(form)} ${messages("shares.onStockExchangeYesNo.title")}",
