--- a/app/views/asset/noneeabusiness/NonEeaInterrupt.scala.html
+++ b/app/views/asset/noneeabusiness/NonEeaInterrupt.scala.html
@@ -24,21 +24,19 @@
     formHelper: FormWithCSRF,
     submitButton: SubmitButton,
     heading: Heading,
-    govukSummaryList: GovukSummaryList
 )
 
-@(index: Int, draftId: String, answerSections: Seq[Section])(implicit request: RequestHeader, messages: Messages)
+@(index: Int, draftId: String)(implicit request: RequestHeader, messages: Messages)
 
 @main_template(
     title = messages("nonEeaBusiness.answers.title"),
     showBackLink = true
 ) {
 
-    @formHelper(action = AnswersController.onSubmit(index, draftId), Symbol("autoComplete") -> "off") {
-        @heading("nonEeaBusiness.answers.heading")
+    <p>Hello from the view</p>
 
-        @govukSummaryList(SummaryList(rows = formatSections(answerSections)))
-
+    @formHelper(action = NonEeaInterruptController.onSubmit(index, draftId),  Symbol("autoComplete") -> "off") {
         @submitButton()
     }
+
 }
