--- a/app/views/components/AddToList.scala.html
+++ b/app/views/components/AddToList.scala.html
@@ -21,16 +21,42 @@
  addToRow: AddToRow
 )
 
-@(data: Seq[AddRow], id: String, entity : String)(implicit messages: Messages)
+@(data: Seq[AddRow], id: String, entity : String, countOpt: Option[String] = None)(implicit messages: Messages)
 
-@if(data.nonEmpty){
-<h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"site.$id")</h2>
+<h2 class="govuk-heading-m" id="data-list-heading--@id">
+@if(data.nonEmpty) {
+ @if(countOpt.isDefined) {
+  @if(countOpt.get == "1") {
+   <h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"addAssets.nonTaxable.count.one.heading", countOpt.get)</h2>
+  } else {
+   <h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"$id", countOpt.get)</h2>
+  }
+ } else {
+  @messages(s"site.$id")
+ }
+}
 
-<div class="govuk-form-group">
- <dl id="data-list--@id" class="hmrc-add-to-a-list hmrc-add-to-a-list--short">
+ <div class="govuk-form-group">
+  <dl id="data-list--@id" class="hmrc-add-to-a-list hmrc-add-to-a-list--short">
   @for(item <- data) {
    @addToRow(item)
   }
- </dl>
-</div>
-}
+  </dl>
+ </div>
+</h2>
+
+@* @if(data.nonEmpty){*@
+@* @if(countOpt.isDefined){*@
+@*  <h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"$id", countOpt.get)</h2>*@
+@* } else {*@
+@*  <h2 class="govuk-heading-m" id="data-list-heading--@id">@messages(s"site.$id")</h2>*@
+@* }*@
+
+@*<div class="govuk-form-group">*@
+@* <dl id="data-list--@id" class="hmrc-add-to-a-list hmrc-add-to-a-list--short">*@
+@*  @for(item <- data) {*@
+@*   @addToRow(item)*@
+@*  }*@
+@* </dl>*@
+@*</div>*@
+@*}*@
