--- a/app/views/asset/NonTaxableInfoView.scala.html
+++ b/app/views/asset/NonTaxableInfoView.scala.html
@@ -38,6 +38,9 @@
 
         <p>@messages("assetInterruptPage.nonTaxable.paragraph1")</p>
 
+        <p>@messages("assetInterruptPage.nonTaxable.leadin")</p>
+
+
         @bulletList(
             "assetInterruptPage.nonTaxable",
             List(
