--- a/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
+++ b/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
@@ -44,6 +44,8 @@
 
     <h2>@messages("trustOwnsNonEeaBusinessYesNo.heading2")</h2>
 
+    <p>@messages("trustOwnsNonEeaBusinessYesNo.paragraph2")</p>
+
         @bulletList("nonEeaBusiness.interrupt.trust", Seq(
             "bullet1",
             "bullet2",
