DDCE-6594 move row html inside if block, add todo comment in MaxedOutView

--- a/app/views/asset/MaxedOutView.scala.html
+++ b/app/views/asset/MaxedOutView.scala.html
@@ -44,6 +44,7 @@
 
         @headingComp(heading)
 
+        @* todo: this may have to change to be in line with AddAssetsView *@
         @rowFormGroupWithSubHeading(inProgressAssets, "inprogress")
 
         @rowFormGroupWithSubHeading(completeAssets, "complete")
