Update tests and deps

--- a/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
+++ b/app/views/asset/TrustOwnsNonEeaBusinessYesNoView.scala.html
@@ -73,7 +73,7 @@
         field = form("value"),
         label = messages("trustOwnsNonEeaBusinessYesNo.question"),
         legendClass = Some("govuk-heading-m"),
-        legendAsHeading = true
+        legendAsHeading = false
     )
 
     @submitButton()
